--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,20 @@
 
 #toggle-switch{
   display: none;
-  width: 60px;
+  width: auto;
+}
+
+.container {
+  text-align: center;
+}
+
+.label-class {
+  display: inline-block !important;
+}
+
+.span-class {
+  vertical-align: middle;
+  line-height: 100px !important;
 }
 
 #credits {
